Ensure header's shifted position cannot be above the viewport

--- a/packages/frontend/src/features/Header/index.module.css
+++ b/packages/frontend/src/features/Header/index.module.css
@@ -12,7 +12,6 @@
 }
 
 .header {
-    top: 0px;
     z-index: 100;
 
     background-color: var(--site-colour-secondary, rgb(255, 236, 218));
@@ -20,14 +19,12 @@
     width: min(calc(var(--vw) * 100), 100%);
     height: min-content;
 
-    transition: transform 0.2s cubic-bezier(0.3, 0, 0.01, 1.02);
-    will-change: transform;
+    transition: top 0.2s cubic-bezier(0.3, 0, 0.01, 1.02);
+    will-change: top;
 }
 
 .header[data-active="true"][data-open="false"] {
-    transform: translateY(-100%);
-
-    transition: transform 0.2s cubic-bezier(0.99, -0.02, 0.7, 1);
+    transition: top 0.2s cubic-bezier(0.99, -0.02, 0.7, 1);
 }
 
 .header-width-controller {
